--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "@storybook/addon-actions": "^6.1.16",
     "@storybook/addon-essentials": "^6.1.16",
     "@storybook/addon-links": "^6.1.16",
+    "@storybook/addon-storyshots": "^6.1.16",
     "@storybook/node-logger": "^6.1.16",
     "@storybook/preset-create-react-app": "^3.1.5",
     "@storybook/react": "^6.1.16",
     "@types/react": "^16.14.2",
-    "@types/react-redux": "^7.1.16"
+    "@types/react-redux": "^7.1.16",
+    "react-test-renderer": "^17.0.1"
   }
 }
