--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.16",
+    "@types/redux": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
