--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/redux": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
